--- a/.gitignore
+++ b/.gitignore
@@ -7,12 +7,23 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Dependencies
 node_modules
+
+# Build output
 dist
 dist-ssr
-*.local
+.next
+out
 
-# Editor directories and files
+# Local env files (DO NOT COMMIT)
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Editor / OS files
 .vscode/*
 !.vscode/extensions.json
 .idea
